--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 MarkupSafe==2.1.5
 pkgutil-resolve-name==1.3.10
+python-decouple==3.8
 pytz==2024.1
 referencing==0.35.1
 rpds-py==0.20.0
