--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,23 @@
-alembic==1.13.2
-aniso8601==9.0.1
-attrs==24.2.0
-blinker==1.8.2
-click==8.1.7
-exceptiongroup==1.2.2
-flask==3.0.3
-Flask-JWT-Extended==4.6.0
-Flask-Migrate==4.0.7
-flask-restx==1.3.0
-flask-sqlalchemy==3.1.1
-greenlet==3.0.3
-importlib-metadata==8.4.0
-importlib-resources==6.4.4
-iniconfig==2.0.0
-itsdangerous==2.2.0
-jinja2==3.1.4
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-Mako==1.3.5
-MarkupSafe==2.1.5
-packaging==24.1
-pkgutil-resolve-name==1.3.10
-pluggy==1.5.0
-PyJWT==2.9.0
-pytest==8.3.2
-python-decouple==3.8
-pytz==2024.1
-referencing==0.35.1
-rpds-py==0.20.0
-SQLAlchemy==2.0.32
-tomli==2.0.1
-typing-extensions==4.12.2
-werkzeug==3.0.4
-zipp==3.20.0
+importlib-metadata==8.4.0  # Provides a way to access metadata of installed packages.
+importlib-resources==6.4.4  # Allows access to resources within Python packages.
+iniconfig==2.0.0  # Configuration library for parsing `.ini` files, often used in testing.
+itsdangerous==2.2.0  # Provides cryptographic utilities for securely signing data.
+jinja2==3.1.4  # A templating engine for Python, often used with web frameworks.
+jsonschema==4.23.0  # Validation library for JSON schema.
+jsonschema-specifications==2023.12.1  # Specifications for JSON schema validation.
+Mako==1.3.5  # A templating engine for Python, used for generating dynamic content.
+MarkupSafe==2.1.5  # Provides utilities for safely handling and escaping HTML/XML.
+packaging==24.1  # Tools for working with Python package versions and requirements.
+pkgutil-resolve-name==1.3.10  # Utilities for resolving package names and module paths.
+pluggy==1.5.0  # Plugin management and hook system for Python.
+PyJWT==2.9.0  # Library for encoding and decoding JSON Web Tokens (JWTs).
+pytest==8.3.2  # A testing framework for Python with a focus on simplicity and scalability.
+python-decouple==3.8  # Simplifies configuration management for Python applications.
+pytz==2024.1  # Time zone definitions and conversions for Python.
+referencing==0.35.1  # Provides utilities for working with references in data.
+rpds-py==0.20.0  # Randomized Priority Data Structures for Python.
+SQLAlchemy==2.0.32  # SQL toolkit and Object Relational Mapper (ORM) for Python.
+tomli==2.0.1  # Library for parsing TOML files.
+typing-extensions==4.12.2  # Backport of new typing features to older Python versions.
+werkzeug==3.0.4  # A comprehensive WSGI web application library.
+zipp==3.20.0  # Backport of `zipfile.Path` for accessing ZIP archives as file system paths.
